@startuml

entity "Users" {
  *id : integer <<PK>>
  --
  member : varchar(50)
  name : varchar(100)
  mail : varchar(100) <<unique>>
  password_hash : varchar(255)
  created_at : timestamp
  updated_at : timestamp
}

entity "income_and_expenditure" {
  *id : integer <<PK>>
  --
  category_id : integer <<FK>>
  user_id : integer <<FK>>
  transaction_id : integer <<FK>>
  payment_type : varchar(20)
  day : date
  amount : decimal(10,2)
}

entity "category" {
  *id : integer <<PK>>
  --
  payment_id <<FK>>
  contents : varchar(100)
}

entity "payment" {
  *id : integer <<PK>>
  --
  user_id : integer <<FK>>
  payment_items : varchar(100)
}

entity "transaction" {
  *id : integer <<PK>>
  --
  user_id : integer <<FK>>
  category_id : integer <<FK>>
  payment_id : integer <<FK>>
  member : varchar(50)
  name : varchar(100)
  payment_items : varchar(100)
  payment_type : varchar(20)
  day : date
  amount : decimal(10,2)
  contents : text
  remarks : text
}

Users ||--o{ income_and_expenditure : has
Users ||--o{ payment : has
Users ||--o{ transaction : makes
payment ||--o{ category : has
income_and_expenditure }o--|| category : "belongs to"
income_and_expenditure ||--|| transaction : "is part of"
transaction }o--|| category : "belongs to"
transaction }o--|| payment : uses

@enduml